--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "author": "Alif",
   "dependencies": {
-    "geddy": "~0.8.13"
+    "geddy": "~0.8.13",
+    "mongodb": "1.3.x",
+    "memory-cache": "0.0.5"
   },
   "devDependencies": {},
   "engines": {
