--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "geddy": "~0.8.13",
     "mongodb": "1.3.x",
-    "memory-cache": "0.0.5"
+    "memory-cache": "0.0.5",
+    "nodemailer": "~0.5.14",
+    "cron": "~1.0.1"
   },
   "devDependencies": {},
   "engines": {
