--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "mongodb": "1.3.x",
     "memory-cache": "0.0.5",
     "nodemailer": "~0.5.14",
-    "cron": "~1.0.1"
+    "cron": "~1.0.1",
+    "pg": "2.5.x"
   },
   "devDependencies": {},
   "engines": {
