--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "author": "Alif",
   "dependencies": {
     "geddy": "0.11.8",
-    "mongodb": "1.3.x",
+    "mongodb": "1.4.0",
     "memory-cache": "0.0.5",
     "nodemailer": "~0.5.14",
     "cron": "~1.0.1",
