--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "async": "~0.2.9",
     "cron": "~1.0.1",
     "geddy": "0.11.8",
-    "mailgun-js": "^0.6.9",
+    "mailgun-js": "0.6.9",
     "memory-cache": "0.0.5",
     "mongodb": "1.4.0",
     "nodemailer": "~0.5.14",
