--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "async": "~0.2.9",
     "cron": "~1.0.1",
-    "geddy": "0.11.8",
+    "geddy": "13.0.7",
     "mailgun-js": "~0.6.9",
     "memory-cache": "0.0.5",
     "mongodb": "1.4.0",
@@ -13,6 +13,7 @@
   },
   "devDependencies": {},
   "engines": {
-    "node": "0.10.0"
+    "node": "0.10.x",
+    "npm": "1.4.23"
   }
 }
