--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "geddy": "13.0.7",
     "mailgun-js": "~0.6.9",
     "memory-cache": "0.0.5",
-    "mongodb": "1.4.0",
-    "pg": "2.5.x"
+    "mongodb": "1.4.0"
   },
   "devDependencies": {},
   "engines": {
