--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 // Place your settings in this file to overwrite default and user settings.
 {
+	"editor.formatOnType": true,
+	"javascript.suggest.useCodeSnippetsOnMethodSuggest": true,
+	"telemetry.enableCrashReporter": false
 }
